over 9000! (Fix z-index so it is higher than openlayers)

--- a/media/turan/base.css
+++ b/media/turan/base.css
@@ -1385,7 +1385,7 @@ a.profilehoverpoint>img {
     left:0;
     width:100%;
     height:97%;
-    z-index:2;
+    z-index:9001;
     background: white;
 }
 .extraoverlay {
